Fixed base page layout (jumpy footer).

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -41,8 +41,9 @@ a:hover {
 {
     font-family: arial, sans-serif;
     color: #232c46;
-    min-height: 100%;
-    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 header{
     line-height: 81px;
@@ -51,6 +52,9 @@ header{
     border-bottom:2px solid #f8ed32;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
+    position: fixed;
+    width: 100%;
+    z-index: 99999;
 }
 header.sticky {
     position: fixed;
@@ -178,8 +182,10 @@ a.add-trip:link{
 }
 
 .icons {icon: auto}
+
 .main{
-    padding-top:20px;
+    padding-top:100px;
+    padding-bottom:20px;
 }
 
 .col-inline-padding-left{
@@ -280,7 +286,7 @@ a.add-trip:link{
 }
 #warnings-panel {
     width: 100%;
-    height:10%;
+    //height:10%;
     text-align: center;
 }
 
@@ -292,8 +298,7 @@ a.add-trip:link{
     height: 80px;
     font-size: small;
     text-align: center;
-    position: absolute;
-    left: 0 ; right: 0; bottom: 0;
+    margin: auto auto 0 auto;
 }
 .footer-text{
     padding:25px 0 0 0;
